Updating eslint config

--- a/url-shortner-webapp/.eslintrc.json
+++ b/url-shortner-webapp/.eslintrc.json
@@ -1,7 +1,11 @@
 {
   "root": true,
   "ignorePatterns": [
-    "projects/**/*"
+    "projects/**/*",
+    "**/*.json",
+    "dist/**",
+    "src/*.ts",
+    "src/environments/**"
   ],
   "overrides": [
     {
