--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -37,8 +37,8 @@ jobs:
 
       - name: Run ESLint
         run: npx eslint .
-          --config .eslintrc.js
-          --ext .js,.jsx,.ts,.tsx
+          --config url-shortner-webapp/.eslintrc.json
+          --ext .js,.ts
           --format @microsoft/eslint-formatter-sarif 
           --output-file eslint-results.sarif
         continue-on-error: true
