--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           npm install eslint@8.10.0
           npm install @microsoft/eslint-formatter-sarif@2.1.7
-          npm install @angular-eslint
+          npm install -g @angular/cli
 
       - name: Run ESLint
         run: npx eslint .
