--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -33,20 +33,11 @@ jobs:
       - name: Install ESLint
         run: |
           npm install eslint@8.10.0
-          npm install @microsoft/eslint-formatter-sarif@2.1.7
           npm install -g @angular/cli
-          npm install @angular-eslint/eslint-plugin@latest --save-dev
+          npm install -g @angular-eslint/eslint-plugin@latest
 
       - name: Run ESLint
         run: npx eslint .
           --config url-shortner-webapp/.eslintrc.json
           --ext .js,.ts
-          --format @microsoft/eslint-formatter-sarif 
-          --output-file eslint-results.sarif
         continue-on-error: true
-
-      - name: Upload analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: eslint-results.sarif
-          wait-for-processing: true
