--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -33,8 +33,7 @@ jobs:
       - name: Install ESLint
         run: |
           npm install eslint@8.10.0
-          npm install @angular/cli
-          npm install @angular-eslint/eslint-plugin@latest
+          npm install
 
       - name: Run ESLint
         run: npx eslint .
