install angular to this folder

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/setup-node@v2
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --prefix ./url-shortner-webapp
 
       - name: Run ESLint
         run: npx eslint .
