fail if eslint fails

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -44,4 +44,4 @@ jobs:
         run: npx eslint .
           --config url-shortner-webapp/.eslintrc.json
           --ext .js,.ts
-        continue-on-error: true
+        continue-on-error: false
