--- a/.github/workflows/unit_test.yaml
+++ b/.github/workflows/unit_test.yaml
@@ -45,7 +45,7 @@ jobs:
         run: |
           python -m pip install coverage
       - name: Run code coverage
-        run: coverage url_shortner_server/manage.py test shortner
+        run: coverage run url_shortner_server/manage.py test shortner
 
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v2
