--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Generate Documentation
         run: pdoc --html url_shortner_server/shortner
       - name: Build And Deploy API Documentation
-        id: builddeploy
+        id: builddeployapi
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
@@ -42,7 +42,7 @@ jobs:
           cd url-shortner-webapp
           npm run generate-docs
       - name: Build And Deploy APP Documentation
-        id: builddeploy
+        id: builddeployapp
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_APP_TOKEN }}
