--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -7,7 +7,10 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_and_deploy_job:
+  build_and_deploy_api_job:
+    environment:
+      name: python-api-docs
+      url: ${{ steps.builddeploy.outputs.static_web_app_url }}
     runs-on: ubuntu-latest
     name: Build and Deploy Job
     steps:
@@ -35,6 +38,17 @@ jobs:
           api_location: "api" # Api source code path - optional
           output_location: "public" # Built app content directory - optional
           ###### End of Repository/Build Configurations ######
+
+  build_and_deploy_angular_job:
+    environment:
+      name: angular-app-docs
+      url: ${{ steps.builddeployangular.outputs.static_web_app_url }}
+    runs-on: ubuntu-latest
+    name: Build and Deploy Job
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
       - name: Install compodoc
         run: npm install @compodoc/compodoc
       - name: Generate Documentation
@@ -42,7 +56,7 @@ jobs:
           cd url-shortner-webapp
           npm run generate-docs
       - name: Build And Deploy APP Documentation
-        id: builddeploy
+        id: builddeployangular
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_APP_TOKEN }}
