--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -12,7 +12,7 @@ jobs:
       name: python-api-docs
       url: ${{ steps.builddeploy.outputs.static_web_app_url }}
     runs-on: ubuntu-latest
-    name: Build and Deploy Job
+    name: Deploy API Docs
     steps:
       - uses: actions/checkout@v2
         with:
@@ -22,7 +22,9 @@ jobs:
         with:
           python-version: "3.x"
       - name: Install pdoc3
-        run: pip3 install pdoc3
+        run: |
+          pip3 install pdoc3
+          pip install -r url_shortner_server/requirements.txt
       - name: Generate Documentation
         run: pdoc --html url_shortner_server/shortner
       - name: Build And Deploy API Documentation
@@ -44,7 +46,7 @@ jobs:
       name: angular-app-docs
       url: ${{ steps.builddeployangular.outputs.static_web_app_url }}
     runs-on: ubuntu-latest
-    name: Build and Deploy Job
+    name: Deploy App Docs
     steps:
       - uses: actions/checkout@v2
         with:
