--- a/url-shortner-webapp/tsconfig.app.json
+++ b/url-shortner-webapp/tsconfig.app.json
@@ -7,10 +7,13 @@
   },
   "files": [
     "src/main.ts",
-    "src/polyfills.ts",
-    "src/**/*.ts"
+    "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "src/**/*.spec.ts"
   ]
 }
