--- a/.github/workflows/unit_test.yaml
+++ b/.github/workflows/unit_test.yaml
@@ -1,11 +1,13 @@
 name: Test & Coverage
 on:
+  push:
+    branches: [ "main" ]
   pull_request:
     branches:
       - "main"
   workflow_dispatch:
   schedule:
-    - cron: '44 1 * * 4'
+    - cron: '18 18 * * 2'
 jobs:
   Unit-Tests:
     runs-on: ubuntu-latest
