--- a/url-shortner-webapp/package.json
+++ b/url-shortner-webapp/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "angular-prompt": "^1.2.0",
+    "ng-mocks": "^14.2.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
