--- a/.github/workflows/unit_test.yaml
+++ b/.github/workflows/unit_test.yaml
@@ -28,6 +28,23 @@ jobs:
         run: python url_shortner_server/manage.py test shortner
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
+  Angular-Unit-Tests:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "The job was triggered on branch ${{ github.ref }}."
+
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+
+      - name: Install dependencies
+        run: npm install --prefix ./url-shortner-webapp
+
+      - name: Run Ng Test
+        run: npm run ng test
+        continue-on-error: false
   Code-Coverage:
     runs-on: ubuntu-latest
     steps:
