--- a/.github/workflows/unit_test.yaml
+++ b/.github/workflows/unit_test.yaml
@@ -2,7 +2,7 @@ name: Test & Coverage
 on:
   push:
     branches:
-      - "main"
+      - ["main","users/anmol"]
   pull_request:
     branches:
       - "main"
