--- a/.github/workflows/unit_test.yaml
+++ b/.github/workflows/unit_test.yaml
@@ -2,7 +2,8 @@ name: Test & Coverage
 on:
   push:
     branches:
-      - ["main","users/anmol"]
+      -"main"
+      -"users/anmol"
   pull_request:
     branches:
       - "main"
