--- a/.github/workflows/unit_test.yaml
+++ b/.github/workflows/unit_test.yaml
@@ -2,8 +2,8 @@ name: Test & Coverage
 on:
   push:
     branches:
-      -"main"
-      -"users/anmol"
+      -"**"
+      # -"users/anmol"
   pull_request:
     branches:
       - "main"
