run test only on users/anmol

--- a/.github/workflows/unit_test.yaml
+++ b/.github/workflows/unit_test.yaml
@@ -2,8 +2,7 @@ name: Test & Coverage
 on:
   push:
     branches:
-      -[ "**" ]
-      # -"users/anmol"
+      - "users/anmol"
   pull_request:
     branches:
       - "main"
