--- a/.github/workflows/unit_test.yaml
+++ b/.github/workflows/unit_test.yaml
@@ -43,7 +43,7 @@ jobs:
         run: npm install --prefix ./url-shortner-webapp
 
       - name: Run Ng Test
-        run: npx run test
+        run: npm run test
         continue-on-error: false
   Code-Coverage:
     runs-on: ubuntu-latest
