--- a/url-shortner-webapp/package.json
+++ b/url-shortner-webapp/package.json
@@ -43,6 +43,7 @@
     "@types/jasmine": "~4.0.0",
     "@typescript-eslint/eslint-plugin": "5.37.0",
     "@typescript-eslint/parser": "5.37.0",
+    "codecov": "^3.8.3",
     "eslint": "^8.23.1",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
