--- a/.github/workflows/unit_test.yaml
+++ b/.github/workflows/unit_test.yaml
@@ -46,8 +46,9 @@ jobs:
         run: |
           python -m pip install -r url_shortner_server/requirements.txt
       - name: Run code coverage
-        run: coverage run url_shortner_server/manage.py test shortner
-        run: coverage report --omit=url_shortner_server/shortner/__init__.py
+        run: |
+          coverage run url_shortner_server/manage.py test shortner
+          coverage report --omit=url_shortner_server/shortner/__init__.py
 
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v2
